0.8.0 - currently working on
- [#5036] Cleanup: Move ViewHelper/ to Classes/ViewHelper/
- [#5037] Cleanup: Move Visibility/ to Classes/Visibility/
- [#5081] Fix: Test crash in Tx_Oelib_TestingFrameworkTest in TYPO3 CMS 6.2 if activateContentAdapter is set
- [#5082] Fix: Missing TSFE renderCharset leads to PHP warnings, thanks to Nicole Cordes
- [#5079] Change: Add dependencies for the test extensions
- [#5078] Fix: Don't use NULL as third parameter in mb_substr
- [#4649] Fix: Also recognize first/last name for current TYPO3 versions
- [#5059] Fix: Test errors in Tx_Oelib_TestingFrameworkTest in 6.2
- [#5058] Fix: Test errors in Tx_Oelib_FrontEndLoginManagerTest in 6.2
- [#5040] Fix: Allow access to public resource files and the manual again
- [#4840] Change: Drop workspace and localization fields from oelib
- [#5032] Cleanup: Move Geocoding/ to Classes/Geocoding/
- [#5031] Cleanup: Move Exception/ to Classes/Exception/
- [#5029] Cleanup: Move the TCA to Configuration/TCA/
- [#5030] Cleanup: Move locallang_db.xml to Resources/Private
- [#5041] Cleanup: Move the common constants file to Classes/
- [#5028] Cleanup: Move the icon to Resources/Public
- [#5020] Fix: Error message: The extension CSS Styled Content is not loaded
- [#5015] Change: Make oelib as compatible up to TYPO3 CMS 6.1.x
- [#5010] Fix: TestingFramework::loginFrontEndUser is slow on TYPO3 CMS 6.1
- [#5011] Fix: Test failure in Tx_Oelib_TemplateHelperTest in TYPO3 CMS 6.1
- [#5009] Fix: Test failure in Tx_Oelib_Model_CurrencyTest and Tx_Oelib_ViewHelper_PriceTest with static_info_tables 6
- [#5007] Change: Deprecate the Timer class
- [#4572] Fix: Add .htaccess to all folders with private resources
- [#3452] Change: Add the company name to ext_emconf.php
- [#4882] Change: Change the test extensions from T3X to folders
- [#4338] Change: Drop tx_oelib_salutationswitcher->altLLkey
- [#4748] Fix: Drop early __destruct calls
- [#4650] Change: Deprecate the ObjectFactory