@@ -74,14 +74,14 @@ return array(
 	'tx_oelib_mapper_frontenduser' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_FrontEndUser.php',
 	'tx_oelib_mapper_frontendusergroup' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_FrontEndUserGroup.php',
 	'tx_oelib_mapper_language' => $extensionPath . 'Mapper/class.tx_oelib_Mapper_Language.php',
-	'tx_oelib_model_backenduser' => $extensionPath . 'Model/class.tx_oelib_Model_BackEndUser.php',
-	'tx_oelib_model_backendusergroup' => $extensionPath . 'Model/class.tx_oelib_Model_BackEndUserGroup.php',
-	'tx_oelib_model_country' => $extensionPath . 'Model/class.tx_oelib_Model_Country.php',
-	'tx_oelib_model_currency' => $extensionPath . 'Model/class.tx_oelib_Model_Currency.php',
-	'tx_oelib_model_federalstate' => $extensionPath . 'Model/FederalState.php',
-	'tx_oelib_model_frontenduser' => $extensionPath . 'Model/class.tx_oelib_Model_FrontEndUser.php',
-	'tx_oelib_model_frontendusergroup' => $extensionPath . 'Model/class.tx_oelib_Model_FrontEndUserGroup.php',
-	'tx_oelib_model_language' => $extensionPath . 'Model/class.tx_oelib_Model_Language.php',
+	'tx_oelib_model_backenduser' => $extensionPath . 'Classes/Model/BackEndUser.php',
+	'tx_oelib_model_backendusergroup' => $extensionPath . 'Classes/Model/BackEndUserGroup.php',
+	'tx_oelib_model_country' => $extensionPath . 'Classes/Model/Country.php',
+	'tx_oelib_model_currency' => $extensionPath . 'Classes/Model/Currency.php',
+	'tx_oelib_model_federalstate' => $extensionPath . 'Classes/Model/FederalState.php',
+	'tx_oelib_model_frontenduser' => $extensionPath . 'Classes/Model/FrontEndUser.php',
+	'tx_oelib_model_frontendusergroup' => $extensionPath . 'Classes/Model/FrontEndUserGroup.php',
+	'tx_oelib_model_language' => $extensionPath . 'Classes/Model/Language.php',
 	'tx_oelib_viewhelper_price' => $extensionPath . 'Classes/ViewHelper/Price.php',
 	'tx_oelib_viewhelpers_googlemapsviewhelper' => $extensionPath . 'Classes/ViewHelpers/GoogleMapsViewHelper.php',
 	'tx_oelib_viewhelpers_imagesourceviewhelper' => $extensionPath . 'Classes/ViewHelpers/ImageSourceViewHelper.php',
